<resources>
    <string name="app_name">Probeez</string>
    <string name="email_address_phone">Email Address or Phone</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter password</string>
    <string name="home">Home</string>

    <!--BottomAppBar-->
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Probeez logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_task_description">Compose a new task</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_probeez_email_content_description">Reply to email</string>

    <!--BottomSheet menus-->
    <string name="menu_item_forward">Forward</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_probeez_all">Reply all</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_star">Star</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>

    <string name="menu_dark_theme_light">Light</string>
    <string name="menu_dark_theme_dark">Dark</string>
    <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
    <string name="menu_dark_theme_system_default">System default</string>

    <!--BottomNavigationDrawer-->
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_tasks">My Tasks</string>
    <string name="navigation_reports">Reports</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_settings">Settings</string>

    <!--HomeFragment-->
    <string name="email_sender_profile_content_desc">Profile image of sender</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>

    <!--TaskFragment-->
    <string name="email_vendor_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>

    <!--ComposeFragment-->
    <string name="compose_close_content_desc">Close editing Task</string>
    <string name="compose_send_content_desc">Save task</string>
    <string name="compose_add_vendor_icon_content_desc">Add vendor</string>
    <string name="compose_title_hint">Task title</string>
    <string name="compose_body_hint">Task details here</string>
    <string name="compose_vendor_group_content_desc">Vendor</string>
    <string name="select_type">Select task type</string>
    <string name="select_task_date">Select task date</string>
    <string name="select_task_time">Select task time</string>
    <string name="task_amount">Task amount</string>

    <!--SearchFragment-->
    <string name="search_suggestion_hint">Search email</string>
    <string name="search_suggestion_title_yesterday">YESTERDAY</string>
    <string name="search_suggestion_title_this_week">THIS WEEK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="choose_topics_that_interest_you">Choose topics that interest you</string>

    <string name="marital_status">Marital Status</string>
    <string name="qualification">Qualification</string>
    <string name="navigation_folders">FOLDERS</string>
    <string name="navigation_folders_images">Images</string>
    <string name="navigation_folders_videos">Videos</string>
    <string name="navigation_folders_docs">Documents</string>
    <string name="title_activity_demo">DemoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_task">Add task</string>
    <string name="select_date_time">Please select date and time</string>
    <string name="enter_valid_date_time">Please enter valid date and time</string>
    <string name="add_vendor">Add vendor</string>
    <string name="enter_vendor_s_name">Enter vendor\'s name</string>
    <string name="plz_enter_vendor_name">Please enter vendor name</string>
    <string name="select_vendor">Please select a vendor</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="choose_existing_photo">Choose existing photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_picker">Image Picker</string>
    <string name="cancel">Cancel</string>
    <string name="image_picker_subtitle">Capture an image or Upload an existing photo</string>
    <string name="report">Report</string>

</resources>