<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_twotone_inbox"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:title="@string/navigation_home"/>

    <item
        android:id="@+id/tasksFragment"
        android:icon="@drawable/ic_twotone_send"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/navigation_tasks"/>

    <!--<item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_twotone_stars"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/navigation_search"/>-->

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_twotone_folder"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/navigation_reports"/>


    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/navigation_settings"/>

</menu>